<resources>
    <string name="app_name">MyFavouriteMovie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="preferences">Preferences</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="detail">Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating</string>
    <string name="default_rate">0.0</string>
    <string name="max_rate">/ 10</string>
    <string name="release_date">Release Date:</string>
    <string name="add_to_favourite">Add to Favourites</string>
    <string name="remove_from_favourite">Remove from Favourites</string>
    <string name="search_hint">Type here..</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
</resources>
